--- a/samples/config-solana.json
+++ b/samples/config-solana.json
@@ -11,6 +11,7 @@
   }],
   "count": 10,
   "offset": 0,
+  "metadataOnly": false,
   "layers": [{
       "layer": "Background",
       "rarities": {
